--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bff5b7">  <td>25/06/07 16:53:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_06_WebElementExercise.TC_06_MailChimp_AssertAllTrue()[pri:0, instance:webdriver.Topic_06_WebElementExercise@4c60d6e9]">TC_06_MailChimp_AssertAllTrue</td> 
+<tr bgcolor="8bb09c">  <td>25/06/22 14:46:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Topic_07_WebLoginExercise.TC_01_LoginWithEmptyEmailAndPassword()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@17f62e33]">TC_01_LoginWithEmptyEmailAndPassword</td> 
   <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="bff5b7">  <td>25/06/07 16:54:09</td>   <td>14351</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_06_WebElementExercise.afterClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@4c60d6e9]">&lt;&lt;afterClass</td> 
+<tr bgcolor="8bb09c">  <td>25/06/22 14:46:19</td>   <td>12737</td> <td>&nbsp;</td><td title="&lt;&lt;Topic_07_WebLoginExercise.afterClass()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@17f62e33]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="bff5b7">  <td>25/06/07 16:53:52</td>   <td>-1852</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_06_WebElementExercise.beforeClass()[pri:0, instance:webdriver.Topic_06_WebElementExercise@4c60d6e9]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="8bb09c">  <td>25/06/22 14:46:04</td>   <td>-2182</td> <td>&nbsp;</td><td title="&gt;&gt;Topic_07_WebLoginExercise.beforeClass()[pri:0, instance:webdriver.Topic_07_WebLoginExercise@17f62e33]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
 </table>
